# Real-time-Video-Stream-Filtering-and-Detection-Tool-Based-on-OpenCV---Qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project plan.md
.cache/clangd/index/: VideoController.cpp.E263CEBD9F2EBA95.idx  main.cpp.1C346941075F0A84.idx  mainwindow.cpp.023949F5AEB9D1EF.idx  mainwindow.h.6AAEA4BACC5A5FEE.idx
.github/workflows/: cmake-single-platform.yml
cmake/: toolchain-qt6-mingw64.cmake
docs/assets/: arch-overview.md  assets_summary.md  class-Detection.md  class-Filter.md  class-VideoSource.md  flow-Export.md  gui-widget-tree.md  seq-FrameLoop.md
docs/design/: DD-CTL-VideoController.md  DD-DET-Detection.md  DD-EXP-Export.md  DD-FLT-Filter.md  DD-GUI-Interface.md  DD-VIN-VideoSource.md
src/: main.cpp
src/core/: VideoController.h
src/core/Detection/: Detection.h  DetectionRenderer.h  DetectorBase.h  LabelMap.h  YOLODetector.h
src/core/Export/: ResultExporter.h  VideoRecorder.h
src/core/Filter/: CannyFilter.cpp  CannyFilter.h  FilterBase.h  FilterChain.cpp  FilterChain.h  GaussianFilter.cpp  GaussianFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  HistEqFilter.cpp  HistEqFilter.h  ThresholdFilter.cpp  ThresholdFilter.h
src/core/VideoSource/: VideoSource.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
